--- a/.gitattributes
+++ b/.gitattributes
@@ -8,3 +8,4 @@
 *.blend filter=lfs diff=lfs merge=lfs binary
 *.pdf filter=lfs diff=lfs merge=lfs binary
 *.psd filter=lfs diff=lfs merge=lfs binary
+Exports/WebGL/space-koreadtech-prototype_0 filter=lfs diff=lfs merge=lfs -text
